syntax = "proto2";
// See README.txt for information and build instructions.

package com.baidu.bjf.remoting.protobuf.v3;



option java_package = "com.baidu.bjf.remoting.protobuf.v3.simplemap";
option java_outer_classname = "AddressBookProtos";

message Person {
  required string name = 1;
 
  map<string, string> stringMap = 2;

	map<int32, int32>  intMap = 3;
	
	map<int64, int64> longMap = 4;
	
	map<bool, bool> booleanMap = 5;

}


